--- a/index.html
+++ b/index.html
@@ -6,31 +6,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+
     <title>Lista de tareas</title>
 </head>
 
 <body>
-    <div id="formularioa">
-        <div>
-            <form action="#" id="formulario">
-                <h1>Lista de tareas</h1>
-                <h2>Título</h2>
-                <input type="text" id="titulo" placeholder="Título de la tarea" required maxlength="25">
-                <h2>Descripción</h2>
-                <textarea id="descripcion" placeholder="Añade una descripción" maxlength="150" cols="30" rows="5" dis></textarea>
-                <h2>Fecha límite</h2>
-                <input type="date" id="fecha" required>
-                <button type="submit">enviar</button>
-            </form>
+    <div class="row">
+        <div id="tareasSection" class="col-12 col-lg-8 pe-0 order-2 order-lg-1">
+            <h2 class="text-center">Lista de tareas</h2>
+            <div id="scrolleable" class="d-flex justify-content-center">
+                <div id="lista-tareas" class="col-12 p-2">
+                </div>
+
+            </div>
+        </div>
+
+        <div id="formularioTareas" class="col p-0 d-flex justify-content-center order-1 order-lg-2">
+            <div class="mt-3 col-10">
+                <h1>Añadir una Tarea</h1>
+                <form action="#" id="formulario">
+                    <h3>Título</h3>
+                    <input type="text" id="titulo" placeholder="Título de la tarea" required maxlength="25"
+                        class="col-12">
+                    <h3>Descripción</h3>
+                    <textarea id="descripcion" placeholder="Añade una descripción" maxlength="150" cols="30" rows="5"
+                        class="col-12"></textarea>
+                    <h3>Fecha límite</h3>
+                    <input type="date" id="fecha" required class="col-12">
+                    <button type="submit" class="col-12 mt-3 btn btn-primary">enviar</button>
+                </form>
+            </div>
         </div>
     </div>
-    <div id="lista-tareas">
 
-    </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+    <script src="https://unpkg.com/packery@2/dist/packery.pkgd.min.js"></script>
+    <script src="https://unpkg.com/draggabilly@3/dist/draggabilly.pkgd.min.js"></script>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
 </body>
 
