--- a/index.html
+++ b/index.html
@@ -5,27 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style copy.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
+
+<link rel="stylesheet" href="@sweetalert2/theme-dark/dark.css">
+<script src="sweetalert2/dist/sweetalert2.min.js"></script>
 
     <title>Lista de tareas</title>
 </head>
 
 <body>
     <div class="row">
-        <div id="tareasSection" class="col-12 col-lg-8 pe-0 order-2 order-lg-1">
-            <h2 class="text-center">Lista de tareas</h2>
-            <div id="scrolleable" class="d-flex justify-content-center">
-                <div id="lista-tareas" class="col-12 p-2">
+        <div id="tareasSection" class="col-12 col-lg-8 p-0 order-2 order-lg-1 d-flex justify-content-center">
+            <section class="mt-3 col-10 col-lg-12">
+                <h2 class="text-center">Lista de tareas</h2>
+                <div id="scrolleable" class="d-flex justify-content-center">
+                    <div id="lista-tareas" class="col-12 p-2">
+                    </div>
                 </div>
-
-            </div>
+            </section>
         </div>
 
         <div id="formularioTareas" class="col p-0 d-flex justify-content-center order-1 order-lg-2">
-            <div class="mt-3 col-10">
+            <section class="mt-3 col-10">
                 <h1>Añadir una Tarea</h1>
                 <form action="#" id="formulario">
                     <h3>Título</h3>
@@ -38,11 +48,11 @@
                     <input type="date" id="fecha" required class="col-12">
                     <button type="submit" class="col-12 mt-3 btn btn-primary">enviar</button>
                 </form>
-            </div>
+            </section>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>-->
 
     <script src="https://unpkg.com/packery@2/dist/packery.pkgd.min.js"></script>
     <script src="https://unpkg.com/draggabilly@3/dist/draggabilly.pkgd.min.js"></script>
